fix(platform): finish PR #284 follow-ups + clean up local profile (#285)
Co-authored-by: Emilio <emilio@local>